# tool-interaction-design

./: .conductor.yaml.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  MANIFEST.in  add_routes.py  conductor.py  ecosystem.yaml  graph.mmd  mcp_server.py  mypy.ini  ontology.yaml  pyproject.toml  router.py  routing-matrix.yaml  seed.yaml  workflow-dsl.yaml
.claude/: settings.json
benchmarks/: benchmark_routing.py
conductor/: __init__.py  __main__.py  archive.py  cli.py  compiler.py  constants.py  contracts.py  contribution_ledger.py  cross_verify.py  doctor.py  dora.py  energy_ledger.py  executor.py  feedback.py  fleet.py  fleet.yaml  fleet_handoff.py  fleet_router.py  fleet_usage.py  governance.py  graph.py  guardian.py  handoff.py  integrity.py  migrate.py  observability.py  oracle.py  parser.py  patchbay.py  plugins.py  policy.py  preflight.py  product.py  profiler.py  prompt_patches.py  prompt_registry.py  retro.py  risk_register.py  router_extensions.py  schemas.py  (+11 more)
hooks/: claude-prompt-gate.sh  codex-preflight.sh
policies/: default.yaml  relaxed.yaml  strict.yaml
process/: README.md
research/: PROCESSING.md
templates/: adr.md  plan.md  spec.md  status.md
tests/: conftest.py  test_active_handoff.py  test_audit_json.py  test_cli_compat.py  test_cli_extensions.py  test_conductor.py  test_contribution_ledger.py  test_cross_verify.py  test_doctor_and_migrate.py  test_e2e_flow.py  test_energy_ledger.py  test_error_paths.py  test_executor.py  test_fleet.py  test_fuzz_validation.py  test_guardian.py  test_guardrailed_handoff.py  test_seed.py  (+26 more)
(+110 files in other folders)
